--- a/_posts/2020-09-27-Green.md
+++ b/_posts/2020-09-27-Green.md
@@ -4,7 +4,7 @@ title: Green
 category: Photoblog
 ---
 
-![image](/images/20200926_160944.jpg.jpg)
+![image](/images/20200926_160944.jpg)
 
 Hiking near Ingersol, Ontario.
 
